[gd_scene load_steps=15 format=3 uid="uid://cxiwktsaqivrw"]

[ext_resource type="Script" uid="uid://b7w4fmdis1d2d" path="res://scripts/player.gd" id="1_g2els"]
[ext_resource type="FontFile" uid="uid://bq5obgtgiy0su" path="res://assets/fonts/BoldPixels1.4.ttf" id="2_dqkch"]
[ext_resource type="Texture2D" uid="uid://barc6nueayqwy" path="res://assets/sprites/muzzle-flash.png" id="2_smehm"]
[ext_resource type="Texture2D" uid="uid://bny3tsex030am" path="res://assets/sprites/ammo-no-bgt.png" id="2_y4r1p"]
[ext_resource type="Texture2D" uid="uid://cdng2asubybn6" path="res://assets/sprites/shotgun-shell.png" id="3_d2wvv"]
[ext_resource type="Texture2D" uid="uid://d2fic348mqoor" path="res://assets/ui/double-barrel-export.png" id="3_fjrip"]
[ext_resource type="Texture2D" uid="uid://07q4wc81fhsr" path="res://assets/sprites/health-no-bg.png" id="5_fjrip"]
[ext_resource type="Texture2D" uid="uid://cmymvu2wai2rb" path="res://assets/sprites/dynamite-no-bg.png" id="5_qlg0r"]
[ext_resource type="Texture2D" uid="uid://d1phy6slmb1hp" path="res://assets/ui/pistol-export-export.png" id="6_d2wvv"]
[ext_resource type="Texture2D" uid="uid://60il1vyh6yeg" path="res://assets/sprites/ammo.png" id="6_smehm"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_u8vuu"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ur7pv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_smehm")
}],
"loop": true,
"name": &"revy_muzzle_flash",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_smehm")
}],
"loop": true,
"name": &"shotgun_muzzle_flash",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_tuyoq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_fjrip")
}],
"loop": true,
"name": &"double_barrel_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_d2wvv")
}],
"loop": true,
"name": &"pistol_idle",
"speed": 5.0
}]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_g2els"]

[node name="Player" type="CharacterBody3D"]
collision_mask = 18
script = ExtResource("1_g2els")
pistol_icon = ExtResource("2_y4r1p")
shotgun_icon = ExtResource("3_d2wvv")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.54258, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_u8vuu")

[node name="UICanvas" type="CanvasLayer" parent="."]

[node name="MuzzleFlash" type="AnimatedSprite2D" parent="UICanvas"]
visible = false
position = Vector2(959, 626)
scale = Vector2(8, 8)
sprite_frames = SubResource("SpriteFrames_ur7pv")
animation = &"revy_muzzle_flash"

[node name="ShootAnim" type="AnimatedSprite2D" parent="UICanvas"]
position = Vector2(966, 676)
scale = Vector2(5.248663, 5.248663)
sprite_frames = SubResource("SpriteFrames_tuyoq")
animation = &"pistol_idle"

[node name="HUDRoot" type="Control" parent="UICanvas"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="UICanvas/HUDRoot"]
custom_minimum_size = Vector2(900, 200)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = -200.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.0784314, 0.0784314, 0.0784314, 1)

[node name="ColorRect2" type="ColorRect" parent="UICanvas/HUDRoot"]
custom_minimum_size = Vector2(890, 180)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -445.0
offset_top = -196.0
offset_right = 445.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1, 0.96)
color = Color(0.162066, 0.162066, 0.162066, 1)

[node name="ColorRect4" type="ColorRect" parent="UICanvas/HUDRoot"]
custom_minimum_size = Vector2(900, 200)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -439.0
offset_top = -193.0
offset_right = 461.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.198195, 0.915182)
color = Color(0.0784314, 0.0784314, 0.0784314, 1)

[node name="ColorRect5" type="ColorRect" parent="UICanvas/HUDRoot"]
custom_minimum_size = Vector2(900, 200)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -236.0
offset_top = -193.0
offset_right = 664.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.198195, 0.915182)
color = Color(0.0784314, 0.0784314, 0.0784314, 1)

[node name="ColorRect6" type="ColorRect" parent="UICanvas/HUDRoot"]
custom_minimum_size = Vector2(900, 200)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -26.0
offset_top = -193.0
offset_right = 874.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.198195, 0.915182)
color = Color(0.0784314, 0.0784314, 0.0784314, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="UICanvas/HUDRoot"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -418.0
offset_top = -180.0
offset_right = -28.0
offset_bottom = -102.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(2, 2)
theme_override_constants/separation = 45

[node name="VBoxContainer" type="VBoxContainer" parent="UICanvas/HUDRoot/HBoxContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="UICanvas/HUDRoot/HBoxContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("5_fjrip")
expand_mode = 4

[node name="HealthLabel" type="Label" parent="UICanvas/HUDRoot/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.885802, 0.783772, 1.15514e-06, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_dqkch")
text = "6/6"
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="UICanvas/HUDRoot/HBoxContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2

[node name="AmmoTexture" type="TextureRect" parent="UICanvas/HUDRoot/HBoxContainer/VBoxContainer2"]
layout_mode = 2
texture = ExtResource("6_smehm")
expand_mode = 4

[node name="AmmoLabel" type="Label" parent="UICanvas/HUDRoot/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.885802, 0.783772, 1.15514e-06, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_dqkch")
text = "6/6"
horizontal_alignment = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="UICanvas/HUDRoot/HBoxContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="UICanvas/HUDRoot/HBoxContainer/VBoxContainer3"]
custom_minimum_size = Vector2(0, 27)
layout_mode = 2
texture = ExtResource("5_qlg0r")
expand_mode = 4
stretch_mode = 4

[node name="DynamiteLabel" type="Label" parent="UICanvas/HUDRoot/HBoxContainer/VBoxContainer3"]
layout_mode = 2
theme_override_colors/font_color = Color(0.885802, 0.783772, 1.15514e-06, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_dqkch")
text = "6/6"
horizontal_alignment = 1

[node name="VBoxContainer4" type="VBoxContainer" parent="UICanvas/HUDRoot/HBoxContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2

[node name="PlayerMoneyLabel" type="Label" parent="UICanvas/HUDRoot/HBoxContainer/VBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.885802, 0.783772, 1.15514e-06, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_dqkch")
theme_override_font_sizes/font_size = 36
text = "$0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GrenadeRethrowLabel" type="Label" parent="UICanvas"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -442.0
offset_top = 752.0
offset_right = 446.0
offset_bottom = 840.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.968627, 0.847059, 0.145098, 0.611765)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_dqkch")
theme_override_font_sizes/font_size = 70
text = "Press E to rethrow dynamite"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOverScreen" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -46.5
offset_right = 48.0
offset_bottom = 46.5
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverLabel" type="Label" parent="GameOverScreen/VBoxContainer"]
layout_mode = 2
text = "YOU DIED"

[node name="RestartButton" type="Button" parent="GameOverScreen/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="MainMenuButton" type="Button" parent="GameOverScreen/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="HurtBox" type="Area3D" parent="."]
collision_layer = 8
collision_mask = 68

[node name="CollisionShape3D" type="CollisionShape3D" parent="HurtBox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_g2els")
debug_color = Color(0, 0.646441, 0.236951, 0.42)

[node name="Muzzle" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.48046, 0)
